compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_external_for_same_project_luau.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(luau, \"one\", \"two\")\n@external(luau, \"three\", \"four\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
---
----- SOURCE CODE

@external(luau, "one", "two")
@external(luau, "three", "four")
pub fn one(x: Int) -> Int {
  todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @external(luau, "three", "four")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.
